--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  smooth_page_indicator: ^1.0.0
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
