--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.6.1
   smooth_page_indicator: ^1.0.0
   avatar_glow: ^2.0.2
+  otp_text_field: ^1.1.3
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
