--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   avatar_glow: ^2.0.2
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.1
+  google_sign_in: ^6.1.2
+
 
 dev_dependencies:
   flutter_test:
