--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.1
   google_sign_in: ^6.1.2
+  dio: ^5.1.2
 
 
 dev_dependencies:
