--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dependencies:
   avatar_glow: ^2.0.2
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.1
-  google_sign_in: ^6.1.2
   dio: ^5.1.2
+  http: ^1.0.0
+  url_launcher: ^6.1.11
 
 
 dev_dependencies:
